--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "DIAM.C": "cpp",
         "DRILL.C": "cpp",
         "GAGE.C": "cpp",
-        "FEED.C": "cpp"
+        "FEED.C": "cpp",
+        "FITS.C": "cpp"
     }
 }
