--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "FEED.C": "cpp",
         "FITS.C": "cpp",
         "ECCENT.C": "cpp",
-        "ECCENTUB.C": "cpp"
+        "ECCENTUB.C": "cpp",
+        "SPEED.C": "cpp"
     }
 }
