--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "SPEED.C": "cpp",
         "SPRING.C": "cpp",
         "BEND.C": "cpp",
-        "MIXTURE.C": "cpp"
+        "MIXTURE.C": "cpp",
+        "CUSP.C": "cpp"
     }
 }
