--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "BELT.C": "cpp",
         "PCD.C": "cpp",
         "QBELT.C": "cpp",
-        "BALLCUT.C": "cpp"
+        "BALLCUT.C": "cpp",
+        "CMITER.C": "cpp"
     }
 }
