--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "CMITER.C": "cpp",
         "COLLET.C": "cpp",
         "DIFFTHRD.C": "cpp",
-        "DOVETAIL.C": "cpp"
+        "DOVETAIL.C": "cpp",
+        "LOFT.C": "cpp"
     }
 }
