--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "DOVETAIL.C": "cpp",
         "LOFT.C": "cpp",
         "MANDREL.C": "cpp",
-        "GEAR.C": "cpp"
+        "GEAR.C": "cpp",
+        "OHM.C": "cpp"
     }
 }
