--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "LOFT.C": "cpp",
         "MANDREL.C": "cpp",
         "GEAR.C": "cpp",
-        "OHM.C": "cpp"
+        "OHM.C": "cpp",
+        "GEARPA.C": "cpp"
     }
 }
