--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "OHM.C": "cpp",
         "GEARPA.C": "cpp",
         "MRADIUS.C": "cpp",
-        "REVOLVER.C": "cpp"
+        "REVOLVER.C": "cpp",
+        "ROUNDER.C": "cpp"
     }
 }
