--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "MRADIUS.C": "cpp",
         "REVOLVER.C": "cpp",
         "ROUNDER.C": "cpp",
-        "LVERN.C": "cpp"
+        "LVERN.C": "cpp",
+        "RATTLE.C": "cpp"
     }
 }
