--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "LVERN.C": "cpp",
         "RATTLE.C": "cpp",
         "SLUG.C": "cpp",
-        "PLATE.C": "cpp"
+        "PLATE.C": "cpp",
+        "HORSE.C": "cpp"
     }
 }
