--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "SPROCKET.C": "cpp",
         "CHAIN.C": "cpp",
         "EXPAND.C": "cpp",
-        "STICK.C": "cpp"
+        "STICK.C": "cpp",
+        "KEYWAY.C": "cpp"
     }
 }
