--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
         "STICK.C": "cpp",
         "KEYWAY.C": "cpp",
         "TUBEWALL.C": "cpp",
-        "UGROOVE.C": "cpp"
+        "UGROOVE.C": "cpp",
+        "CSK.C": "cpp"
     }
 }
