--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,6 @@
         "CSK.C": "cpp",
         "TEMP.C": "cpp",
         "UNIT.C": "cpp"
-    }
+    },
+    "python.pythonPath": "C:\\Users\\jack7\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
