--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,5 +45,6 @@
         "TEMP.C": "cpp",
         "UNIT.C": "cpp",
         "WIRE.C": "cpp"
-    }
+    },
+    "python.pythonPath": "C:\\Users\\jack7\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
